# dreaming-llm

./: .gitignore  CHANGELOG.md  CLEANUP_SUMMARY.md  COMPLETE.md  DREAMING_README.md  DREAM_VIEWER_IMPLEMENTATION.md  IMPROVEMENTS_COMPLETE.md  QUICKSTART.md  QUICK_REFERENCE.md  README.md  pyproject.toml  requirements.txt  training_log.txt  training_log_improved.txt
.github/: copilot-instructions.md
archive/: CLEANUP_COMPLETE.md  COCO_TRAINING.md  DREAMING_README.md  FINAL_SUMMARY.md  IMPLEMENTATION_COMPLETE.md  LARGE_SCALE_DISTILLATION.md  MOE_ARCHITECTURE_EXPLAINED.md.old  PROJECT_STATUS.md  TRAINING_PROGRESS.md  WORKFLOW.md  moe_architecture.svg.old
configs/: default.yaml
data/: README.md
datasets/: README.md
docs/: COCO_IMPLEMENTATION.md  DREAMING_ARCHITECTURE.md  DREAM_VIEWER.md  INDEX.md  USAGE_EXAMPLES.md  architecture.md
examples/: dreaming_examples.py  online_rl_inference.py
notebooks/: README.md
pretrained/: Modelfile
pretrained_enhanced/: README.md  config.json  tokenizer.json
pretrained_llama3/: README.md
scripts/: benchmark_model.py  compare_models.py  create_pretrained_model.py  demo_dream_viewer.py  demo_dreaming.py  distill_dreaming_from_ollama.py  distill_from_open_dataset.py  distill_large_scale.py  distill_ollama.py  download_coco.py  download_hf_llm_dataset.py  ds_config.json  interactive_demo.py  llm_chat.py  simple_train.py  test_distilled_model.py  test_image_tokenizer.py  test_pretrained.py  train_dreaming_model.py  train_full_datasets.py  train_image_tokenizer.py  train_openassistant.py  train_with_patterns.py
(+32 files in other folders)
