[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "image-token-llm"
version = "0.1.0"
description = "Playground for an image-token reasoning LLM with graph RAG and multi-simulation evaluation pipelines."
readme = "README.md"
authors = [{ name = "Researcher", email = "research@example.com" }]
license = { text = "Proprietary" }
requires-python = ">=3.11"
dependencies = [
  "torch>=2.2",
  "torchvision>=0.17",
  "networkx>=3.2",
  "faiss-cpu>=1.7.4",
  "pydantic>=2.4",
  "hydra-core>=1.3",
  "numpy>=1.26",
  "scipy>=1.11"
]

[project.optional-dependencies]
dev = ["pytest>=7.4", "pytest-cov>=4.1", "black>=24.0", "ruff>=0.4"]

[tool.setuptools.packages.find]
where = ["src"]
